src/test/deca/context/invalid/created/decl_var/decl_float_eq_int.deca
// Description :
//    test affectation incorrect float = int
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 9: Types incompatibles pour l’affectation

{
float a = 1; 
//1 n'est pas un float
}